--- a/index.html
+++ b/index.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Registro de Dados de Campo - Página 1</title>
+    <title>Registro de Dados de Campo</title>
     <link rel='stylesheet' type='text/css' href='styles.css'>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js'></script>
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css' />
+    <script src='https://cdn.jsdelivr.net/npm/chart.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js'></script>
 </head>
 <body>
     <div class='container'>
-        <h1>Registro de Dados de Campo - Página 1</h1>
-        <form id='dataForm1'>
+        <h1>Registro de Dados de Campo</h1>
+        <p>Uma ferramenta simples para registrar e armazenar dados coletados em campo.</p>
+        <form id='dataForm'>
             <label>Ponto: </label><input type='text' id='point' name='point'><br>
+            <h2>Coordenadas</h2>
             <label>Latitude: </label><input type='text' id='latitude' name='latitude'><br>
             <label>Longitude: </label><input type='text' id='longitude' name='longitude'><br>
-            <label>Condições de Maré: </label>
+            <h2>Condições de Mare</h2>
+            <label>Estado da Mare: </label>
             <select id='tideCondition' name='tideCondition'>
-                <option value='Enchente'>Enchente</option>
-                <option value='Vazante'>Vazante</option>
+                <option value='Mare Alta'>Mare Alta</option>
+                <option value='Mare Baixa'>Mare Baixa</option>
             </select><br>
-            <label>Condição da Água: </label><input type='text' id='waterCondition' name='waterCondition'><br>
-            <label>Data: </label><input type='date' id='date' name='date'><br>
-            <button type='button' onclick='saveData1()'>Salvar Dados</button>
-        </form>
-        <div id='map' style='height: 300px;'></div>
-       
+            <label>Condição da Agua: </label><input type='text' id='waterCondition' name='waterCondition'><br>
+            
     </div>
-    <script src='script1.js'></script>
+    <script src='script.js'></script>
 </body>
 </html>
