--- a/index.html
+++ b/index.html
@@ -1,57 +1,55 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="style.css">
-<title>Aplicativo de Monitoramento Marinho</title>
+    <title>Registro de Dados de Campo - Dashboard</title>
+    <link rel='stylesheet' type='text/css' href='styles.css'>
+    <script src='https://cdn.jsdelivr.net/npm/chart.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js'></script>
 </head>
 <body>
-<div class="container">
-<h1>Aplicativo de Monitoramento Marinho</h1>
-<form id="dataForm">
-<div class="form-group">
-<label for="point">Ponto:</label>
-<input type="text" id="point" name="point" required>
-</div>
-<div class="form-group">
-<label for="latitude">Latitude:</label>
-<input type="text" id="latitude" name="latitude" required>
-</div>
-<div class="form-group">
-<label for="longitude">Longitude:</label>
-<input type="text" id="longitude" name="longitude" required>
-</div>
-<div class="form-group">
-<label for="tideCondition">Condição de Maré:</label>
-<select id="tideCondition" name="tideCondition" required>
-<option value="enchente">Enchente</option>
-<option value="vazante">Vazante</option>
-</select>
-</div>
-<div class="form-group">
-<label for="waterCondition">Condição da Água:</label>
-<input type="text" id="waterCondition" name="waterCondition" required>
-</div>
-<button type="button" onclick="addData()">Adicionar Dados</button>
-</form>
-<table id="dataTable">
-<thead>
-<tr>
-<th>Ponto</th>
-<th>Latitude</th>
-<th>Longitude</th>
-<th>Condição de Maré</th>
-<th>Condição da Água</th>
-</tr>
-</thead>
-<tbody>
-<!-- As linhas de dados serão inseridas aqui pelo JavaScript -->
-</tbody>
-</table>
-<button onclick="exportToCSV()">Exportar para CSV</button>
-</div>
-<script src="script.js"></script>
+    <div class='container'>
+        <h1>Registro de Dados de Campo - Dashboard</h1>
+        <p>Uma ferramenta simples para registrar e visualizar dados coletados em campo.</p>
+        <form id='dataForm'>
+            <label>Ponto: </label><input type='text' id='point' name='point'><br>
+            <h2>Coordenadas</h2>
+            <label>Latitude: </label><input type='text' id='latitude' name='latitude'><br>
+            <label>Longitude: </label><input type='text' id='longitude' name='longitude'><br>
+            <h2>Condições de Maré</h2>
+            <label>Estado da Maré: </label>
+            <select id='tideCondition' name='tideCondition'>
+                <option value='Mare Alta'>Mare Alta</option>
+                <option value='Mare Baixa'>Mare Baixa</option>
+            </select><br>
+            <label>Condição da Água: </label><input type='text' id='waterCondition' name='waterCondition'><br>
+            <label>Observações: </label><textarea id='observations' name='observations'></textarea><br>
+            <h2>Data e Hora</h2>
+            <label>Data: </label><input type='date' id='date' name='date'><br>
+            <label>Hora: </label><input type='time' id='time' name='time'><br>
+            <button type='button' onclick='saveData()'>Salvar Dados</button>
+        </form>
+        <h2>Dados Salvos</h2>
+        <div id='dataDisplay'></div>
+        <button type='button' onclick='downloadData()'>Baixar Dados</button>
+        <h2>Dashboard</h2>
+        <div class='dashboard'>
+            <label>Tipo de Gráfico: </label>
+            <select id='chartType'>
+                <option value='bar'>Barra</option>
+                <option value='line'>Linha</option>
+                <option value='pie'>Pizza</option>
+                <option value='radar'>Radar</option>
+            </select><br>
+            <label>Dados para Plotar: </label>
+            <select id='dataToPlot'>
+                <option value='latitude'>Latitude</option>
+                <option value='longitude'>Longitude</option>
+            </select><br>
+            <button type='button' onclick='generateChart()'>Gerar Gráfico</button>
+            <canvas id='dataChart' width='400' height='200'></canvas>
+            <button type='button' onclick='downloadChart()'>Baixar Gráfico</button>
+        </div>
+    </div>
+    <script src='script.js'></script>
 </body>
 </html>
-dw
